[tool.poetry]
name = "doveflow"
version = "0.1.0"
description = "General purpose asynchronous workflow canvas"
authors = ["Elias Gabriel <me@eliasfgabriel.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
