[tool.poetry]
name = "doveflow"
version = "0.1.0"
description = "General purpose asynchronous workflow canvas"
authors = ["Elias Gabriel <me@eliasfgabriel.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gevent = "^21.1.2"
redis = "^3.5.3"
hiredis = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
hypothesis = "^6.0.3"
pytest = "^6.2.2"
pytest-xdist = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
